// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ○ Preflight
Layer 1:
○ Publish:A
○ Publish:B
Layer 2: ○ CreateTag

0/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ● Preflight
Layer 1:
○ Publish:A
○ Publish:B
Layer 2: ○ CreateTag

0/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
● Publish:A
● Publish:B
Layer 2: ○ CreateTag

1/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
✓ Publish:A
✓ Publish:B
Layer 2: ✓ CreateTag

4/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
✓ Publish:A
✗ Publish:B
Layer 2: ○ CreateTag

2/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > compact > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:A', 'Publish:B' ], [ 'CreateTag' ] ], ed...) 6`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
● Publish:A
○ Publish:B
Layer 2: ○ CreateTag

1/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > full > renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│





┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→







┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→







┌──────────┐
│○  StepA   │
└──────────┘

──→

┌──────────┐
│○  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→





0/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > full > renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│





┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│●  StepC   │
└──────────┘

──→







┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│●  StepC   │
└──────────┘

──→







┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│●  StepC   │
└──────────┘

──→





1/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > DAG mode > full > renderDagFull({ layers: [ [ 'StepA' ], [ 'StepB', 'StepC' ], [ 'StepD' ] ], edges: [ [ 'StepA'...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘



┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│





┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→







┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→







┌──────────┐
│✓  StepA   │
└──────────┘

──→

┌──────────┐
│●  StepB   │
└──────────┘

──→

┌──────────┐
│○  StepD   │
└──────────┘

│

│











┌──────────┐
│○  StepC   │
└──────────┘

──→





1/4 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > complex DAG > full > renderDagFull({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│







┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│







┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│













┌────────────────────┐
│○ Publish:@kitz/syn  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│













┌────────────────────┐
│○ Publish:@kitz/syn  │
└────────────────────┘















┌────────────────────┐
│○     Preflight      │
└────────────────────┘



┌────────────────────┐
│○ Publish:@kitz/core │
└────────────────────┘



┌────────────────────┐
│○     CreateTag      │
└────────────────────┘



┌────────────────────┐
│○      PushTags      │
└────────────────────┘



│













┌────────────────────┐
│○ Publish:@kitz/flo  │
└────────────────────┘















│













┌────────────────────┐
│○ Publish:@kitz/syn  │
└────────────────────┘













0/6 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > complex DAG > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ○ Preflight
Layer 1:
○ Publish:@kitz/core
○ Publish:@kitz/flo
○ Publish:@kitz/syn
Layer 2: ○ CreateTag
Layer 3: ○ PushTags

0/6 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > complex DAG > renderDag({ layers: [ [ 'Preflight' ], [ 'Publish:@kitz/core', 'Publish:@kitz/flo', 'Publi...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
Workflow Progress

Layer 0: ✓ Preflight
Layer 1:
✓ Publish:@kitz/core
● Publish:@kitz/flo
● Publish:@kitz/syn
Layer 2: ○ CreateTag
Layer 3: ○ PushTags

2/6 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
○ Preflight
○ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

0/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 2`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
● Preflight
○ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

0/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 3`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
● Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

1/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 4`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
✓ Publish:core
✓ Publish:flo
✓ CreateTag
✓ PushTags

5/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Preflight', 'Publish:core', 'Publish:flo', 'CreateTag', 'PushTa...) 5`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Preflight
✗ Publish:core
○ Publish:flo
○ CreateTag
○ PushTags

1/5 completed (0)
╚══════════════════════════════════════════════════╝"
`;

exports[`Renderer > list mode > renderList({ activities: [ 'Step1', 'Step2', 'Step3' ], colors: true, events: [ Started { a...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
✓ Step1
● Step2
○ Step3

1/3 completed (0)
╚══════════════════════════════════════════════════╝"
`;
